# stm32_cubemx_bldc

./: .mxproject  stm32-cubemx-bldc.ioc
Core/Inc/: main.h  stm32l4xx_it.h  tim.h
Core/Src/: gpio.c  main.c  stm32l4xx_it.c  tim.c
Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_hal_gpio.h
app/: CMakeLists.txt
app/bldc/: CMakeLists.txt  bldc.c  bldc.h  bldc_config.h
app/bldc_motor/: CMakeLists.txt  bldc_motor.c  bldc_motor.h  bldc_motor_config.h
app/main/: CMakeLists.txt  main.c
cmake/stm32cubemx/: CMakeLists.txt
